# gemenr

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  gemenr.toml.example
bins/gemenr-cli/: Cargo.toml
bins/gemenr-cli/src/: daemon.rs  main.rs
bins/gemenr-im/: Cargo.toml
bins/gemenr-im/src/: lark.rs  main.rs  service.rs
crates/gemenr-core/: Cargo.toml
crates/gemenr-core/src/: builder.rs  config.rs  error.rs  lib.rs  message.rs  protocol.rs  runtime_manager.rs  test_support.rs  tool_invoker.rs  tool_spec.rs
crates/gemenr-core/src/access/: adapter.rs  mod.rs  router.rs
crates/gemenr-core/src/agent/: dispatcher.rs  mod.rs
crates/gemenr-core/src/context/: mod.rs  soul.rs  tape.rs
crates/gemenr-core/src/kernel/: mod.rs  prompt.rs  turn.rs
crates/gemenr-core/src/model/: anthropic.rs  mod.rs
crates/gemenr-tools/: Cargo.toml
crates/gemenr-tools/src/: handler.rs  lib.rs  policy.rs
crates/gemenr-tools/src/builtin/: fs_read.rs  fs_write.rs  mod.rs  shell.rs  update_soul.rs
crates/gemenr-tools/src/mcp/: adapter.rs  client.rs  mod.rs
crates/gemenr-tools/src/sandbox/: landlock.rs  mod.rs  seatbelt.rs
