[workspace]
resolver = "3"
members = [
    "crates/gemenr-core",
    "crates/gemenr-tools",
    "bins/gemenr-cli",
    "bins/gemenr-im",
]

[workspace.package]
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP
reqwest = { version = "0.12", features = ["json"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Config
toml = "0.8"
regex = "1"

# WebSocket
tokio-tungstenite = "0.26"
futures-util = "0.3"
