[package]
name = "gemenr-cli"
version = "0.1.0"
edition.workspace = true

[dependencies]
gemenr-core = { path = "../../crates/gemenr-core" }
gemenr-tools = { path = "../../crates/gemenr-tools" }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
