[package]
name = "gemenr-cli"
version = "0.1.0"
edition.workspace = true

[dependencies]
gemenr-core = { path = "../../crates/gemenr-core" }
gemenr-tools = { path = "../../crates/gemenr-tools" }
async-trait = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
