[package]
name = "gemenr-im"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
gemenr-core = { path = "../../crates/gemenr-core" }
gemenr-tools = { path = "../../crates/gemenr-tools" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
