[package]
name = "gemenr-tools"
version = "0.1.0"
edition.workspace = true

[dependencies]
gemenr-core = { path = "../gemenr-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
